<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightgrey"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/include_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/usertech_bg_padding"
        android:orientation="vertical">

        <RelativeLayout
            style="@style/itembgstyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_height"
            android:layout_marginTop="@dimen/margin_top">

            <ImageView
                android:id="@+id/iv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/usertech_bg_padding"
                android:src="@drawable/icon_username" />

            <EditText
                android:id="@+id/txt_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/margin_left"
                android:layout_toRightOf="@+id/iv_name"
                android:background="@null"
                android:hint="@string/hint_username"
                android:padding="10dip"
                android:text="13819755555" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/grey_line" />

        <RelativeLayout
            style="@style/itembgstyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_height">

            <ImageView
                android:id="@+id/iv_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/usertech_bg_padding"
                android:src="@drawable/icon_password" />

            <EditText
                android:id="@+id/txt_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/margin_left"
                android:layout_toRightOf="@+id/iv_pwd"
                android:background="@null"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:padding="10dip"
                android:text="chaorenyeye" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_height"
            android:layout_marginTop="10dip">

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_height"
                android:layout_marginLeft="@dimen/margin_left"
                android:layout_marginRight="@dimen/margin_right"
                android:background="@drawable/btn_login_bg"
                android:text="@string/txt_login"
                android:textColor="@color/white" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_height"
            android:layout_marginTop="@dimen/margin_top">

            <TextView
                android:id="@+id/tv_forgetpwd"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:text="@string/txt_forgetpwd"
                android:textColor="@color/red" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>